	* ilut_win32.c (ilutConvertSliceToBitmap): Fixed bug #1775036 (definition of buff).
	* il_psd.c (PsdGetData): Fixed bug #2219350 (16-bit luminance images not loading properly).
	* il_manip.c: Cleared up some minor formatting issues.
	* il_png.c (iSavePngInternal): Fixed bug #1680577 (some metadata not written correctly).
	* il_nvidia.c (ilnVidiaCompressDXT1): Disabled mipmap generation and added code to
	ilOutputHandler constructor to determine the proper size of the buffer.

1.7.5
---
- Added check in iluScale for parameters of 0, which would cause a crash.
- Cleaned up the tons of extra lines in il_dds.c.
- Added .vtf support.
- Fixed bug in file caching if the buffer was too small.
- Fixed crash saving .tga files if no author name string present.
- Fixed crash in ilActive* if a number too large is specified.
- Added support for alpha-only formats (IL_ALPHA).
- Better conversion from lower bpp to higher bpp data.

1.7.4
---
- Added German translations of error codes in ILU.
- Added ilutGLSubTex back to ilut.h.
- Added 64-bit Windows configurations to projects.
- Fixed various 64-bit bugs.
- Fixed dependency of ILUT on MSVCRT DLL.
- Redefined ILsizei as size_t.
- Changed allocation functions to ILsizei from ILuint.
- Removed ILvoid, since it is now illegal in GCC 4.2.
- Started rewriting Windows HD Photo support from scratch.
- Started DirectX 10 code.
- Changed ilSaveCHeader's second argument to char*.
- Changed ilutGLScreenie to use Unicode if needed.
- Fixed various Unicode problems with ilSetString.
- Added progressive saving of .jpg with IL_JPG_PROGRESSIVE flag.
- Added more to the Fortran wrapper.
- Fixed TIF loading/saving (#define LZW_SUPPORT not enabled in libtiff).
- Changed MSVC++ to use MSVCRT libraries again.
- Added IL_BLIT_BLEND to influence alpha blending in ilBlit/ilOverlayImage.

1.7.3
---
- ilGenImage now returns ILuint instead of ILint.
- Added pkgconfig devil.pc.
- Applied bugfixes from Richard Sims (mainly .psd).
- Added new Xcode framework.